--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -28,6 +28,8 @@
     "firebase": "^6.2.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "newman": "^5.2.4",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -38,9 +40,9 @@
     "@angular/cli": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
