--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "spring-wei-api",
   "description": "API pour les développements SpringWEI",
   "version": "1.5.1",
+  "type" : "module",
   "scripts": {
     "start": "node server.js"
   },
